[tool.poetry]
name = "watchdog-flask"
version = "0.1.0"
description = ""
authors = ["zeroruka <89210318+zeroruka@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "watchdog_flask"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.4.4"
flask-restful = "^0.3.9"
flask-cors = "^3.0.10"
requests = "^2.28.2"
flask-sqlalchemy = "^3.0.3"
telepot = "^12.7"
beautifulsoup4 = "^4.12.0"
loguru = "^0.6.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
